[tool.poetry]
name = "proj-420-d10"
version = "0.1.0"
description = "Projet du cours 420-D10-BB"
authors = ["Khaled <6216925@bdeb.qc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
